[ppc] TLABWasteIncrement not loaded correctly

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 9, 10
    • Component/s: hotspot
    • None
    • b21
    • ppc

      TLABWasteIncrement is loaded as 16 bit immediate, but can be bigger.

      This was seen when running TestOptionsWithRanges without G1. With G1, the code is not used. So I also fix the test to run without G1. Then we see an assertion in the debug build.

            Assignee:
            Goetz Lindenmaier
            Reporter:
            Goetz Lindenmaier
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: