8179953: [ppc] TLABWasteIncrement not loaded correctly

Also fix TestOptionWithRanges to show the bug.

Reviewed-by: dholmes, shade